# OpenCRun

./: CMakeLists.txt  Makefile.common  Makefile.config.in  Makefile.rules  README.md  TODO.md
autoconf/: configure.ac
bench/: CMakeLists.txt  Makefile.bench
bench/blocked-msquare/: CMakeLists.txt  blocked-msquare.cpp
bench/schoolbook-msquare/: CMakeLists.txt
cmake/: opencrun-uninstall.cmake
include/: CMakeLists.txt
include/CL/: cl.hpp  cl_platform.h
include/opencrun/Core/: Command.h  CommandQueue.h  Context.h  Device.h  DeviceCompiler.h  Event.h  Kernel.h  MemoryObj.h  MemoryObject.h  Platform.h  Profiler.h  Program.h  Sampler.h
include/opencrun/Device/: Devices.h
include/opencrun/Device/Builtins/: Builtin.td  Common.td  Geometric.td  Integer.td  Math.td  OpenCL.td  Relational.td  Type.td  Vloadstore.td  Vmisc.td
include/opencrun/Device/CPU/: AsyncCopyThread.h  CPUDevice.h  CPUThread.h  Command.h  InternalCalls.h  Memory.h  Multiprocessor.h  OCLTypes.h  ThreadPool.h  WaitList.h
include/opencrun/Device/CPUPasses/: AllPasses.h
include/opencrun/Device/GenLib/: Common.td  Integer.td  Math.td  OCLDef.td  OCLTypes.td  Relational.td
include/opencrun/Passes/: AggressiveInliner.h  AllPasses.h  AsyncCopySpecialization.h  FootprintEstimate.h
include/opencrun/System/: Hardware.h  Time.h
include/opencrun/Util/: BuiltinInfo.h  Builtins.def  DimensionInfo.h  EmitCustomLLVMOnlyAction.h  Footprint.h  LLVMCodeGenAction.h  LLVMOptimizer.h  MTRefCounted.h  ModuleInfo.h  OpenCLMetadataHandler.h  OpenCLTypeSystem.h  OptionalOutput.h  SetUniquePtr.h  Table.h
lib/: CMakeLists.txt  Makefile
lib/Core/: CMakeLists.txt  Command.cpp  CommandQueue.cpp  Context.cpp  Device.cpp  DeviceCompiler.cpp  Event.cpp  Kernel.cpp  MemoryObj.cpp  MemoryObject.cpp  Platform.cpp  Profiler.cpp  Program.cpp  Sampler.cpp
lib/Device/: Devices.cpp  Makefile
lib/Device/CPU/: AsyncCopyThread.cpp  AsyncCopyThread.h  AsyncInternalCalls.cpp  AutomaticLocalVariables.cpp  CMakeLists.txt  CPUCompiler.cpp  CPUCompiler.h  CPUDevice.cpp  CPUDevice.h  CPUKernelArguments.h  CPUKernelInfo.h  CPUModuleInfo.cpp  CPUModuleInfo.h  CPUPasses.h  CPUThread.cpp  CPUThread.h  Command.cpp  Command.h  GlobalLockInternalCalls.cpp  ImageSupport.cpp  ImageSupport.h  InternalCalls.def  InternalCalls.h  JITCompiler.cpp  JITCompiler.h  Makefile  Memory.cpp  Memory.h  Mfence.cpp  Multiprocessor.cpp  Multiprocessor.h  StackX8632.inc  StackX8664.inc  SynchronizationInternalCalls.cpp  ThreadPool.cpp  ThreadPool.h  WaitList.cpp  WorkItemInternalCalls.cpp
lib/Device/CPU/Passes/: AllPasses.cpp  AutomaticLocalVariables.cpp  CMakeLists.txt  GroupParallelStub.cpp  Makefile
lib/Device/CPULib/: Async.cl  Common.cl  Geometric.cl  Integer.cl  Makefile  Math.cl  Relational.cl
lib/Device/CPUPasses/: AllPasses.cpp  GroupParallelStub.cpp
lib/Headers/: CMakeLists.txt  Makefile
lib/Passes/: AggressiveInliner.cpp  AllPasses.cpp  AsyncCopySpecialization.cpp  CMakeLists.txt  FootprintEstimate.cpp
lib/System/: CMakeLists.txt  Hardware.cpp
lib/Util/: BuiltinInfo.cpp  CMakeLists.txt  DimensionInfo.cpp  EmitCustomLLVMOnlyAction.cpp  LLVMCodeGenAction.cpp  LLVMOptimizer.cpp  ModuleInfo.cpp  OpenCLMetadataHandler.cpp  OpenCLTypeSystem.cpp
test/: CMakeLists.txt  Makefile  lit.cfg  lit.site.cfg.in
test/Device/CPUPasses/AutomaticLocals/: array.ll  multiple.ll  scalar.ll
test/Device/CPUPasses/GroupParallelStub/: CommandLine.ll  NoParamsKernel.ll  PassBuffer.ll  PassByValue.ll
test/Passes/AggressiveInliner/: ExternalCall.ll  OnlyLeaves.ll  RecursiveInline.ll  SimpleInline.ll
test/Passes/FootprintEstimator/: Accuracy.ll  Call.ll  DerivedTypes.ll  NullKernel.ll  PrimitiveTypes.ll
test/Unit/: lit.cfg  lit.site.cfg.in
tools/: CMakeLists.txt  Makefile
tools/OpenCRunCPUPasses/: CMakeLists.txt  ForceLinking.cpp
tools/OpenCRunPasses/: CMakeLists.txt
tools/libOpenCRun/: CMakeLists.txt  Context.cpp  ContextProperties.def  Device.cpp  DeviceProperties.def  EnqueueCommand.cpp  Event.cpp  EventProperties.def  Extension.cpp  Kernel.cpp  KernelProperties.def  Makefile  MemoryObject.cpp  MemoryObjectProperties.def  Platform.cpp  Profiling.cpp  ProfilingProperties.def  Program.cpp  ProgramProperties.def  Sampler.cpp  SamplerProperties.def  Utils.h  libOpenCRun.exports
tools/platform-query/: CMakeLists.txt  Makefile
unittests/: CMakeLists.txt
unittests/API/: CMakeLists.txt  Context.cpp  Kernel.cpp  Makefile
unittests/Runtime/: ArgPassing.cpp  CMakeLists.txt  CallGraphLoop.cpp  LocalMemory.cpp  Makefile  RuntimeFixture.cpp  RuntimeFixture.h
unittests/Skel/: CMakeLists.txt
utils/: CMakeLists.txt
utils/OCLBench/include/oclbench/: Benchmark.h  DataTypes.h
utils/OCLBench/lib/: Benchmark.cpp  CMakeLists.txt
utils/OCLGen/: CMakeLists.txt  OCLBuiltin.cpp  OCLBuiltin.h  OCLBuiltinDefEmitter.cpp  OCLBuiltinDefEmitter.h  OCLBuiltinImplEmitter.cpp  OCLBuiltinImplEmitter.h  OCLConstant.cpp  OCLConstant.h  OCLConstantEmitter.cpp  OCLEmitter.h  OCLEmitterUtils.cpp  OCLEmitterUtils.h  OCLGen.cpp  OCLGen.h  OCLLibBuiltin.cpp  OCLLibBuiltin.h  OCLLibEmitter.cpp  OCLTarget.cpp  OCLTarget.h  OCLTargetDefEmitter.cpp  OCLType.cpp  OCLType.h  OCLTypeDefEmitter.cpp  OCLTypeDefEmitter.h
